--- a/tutorial_notebooks/precoded/Tutorial 1- Choosing a model.ipynb
+++ b/tutorial_notebooks/precoded/Tutorial 1- Choosing a model.ipynb
@@ -20,9 +20,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "cce883ad",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# import PyBEAM's default module\n",
@@ -39,9 +41,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "id": "f41be72a",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# call simpleDDM model\n",
@@ -54,7 +58,7 @@
     "model_leakage = pbp.leakage()\n",
     "\n",
     "# call moving_thresholds model\n",
-    "model_moving_thresholds = pbp.moving_thresholds()\n",
+    "model_moving_thresholds = pbp.moving_thresholds(thresholds = 'weibull')\n",
     "\n",
     "# call UGM model\n",
     "model_UGM = pbp.UGM()\n",
@@ -72,22 +76,30 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "3aad8ff3",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12acb10e",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
    "source": [
     "model_simpleDDM = pbp.simpleDDM(sigma = 1.0, \n",
     "                        contamination = 'none')\n",
     "\n",
-    "sigma: sets the diffusion rate. Defaults to 1.0.\n",
+    "# sigma: sets the diffusion rate. Defaults to 1.0.\n",
     "\n",
-    "contamination: sets if contamination is included to the model. Defaults to 'none', can also be 'uniform'.\n"
+    "# contamination: sets if contamination is included to the model. Defaults to 'none', can also be 'uniform'.\n"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "060703e5",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f04e3ed9",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
    "source": [
     "model_DDM = pbp.DDM(sigma = 1.0, \n",
     "            contamination = 'none', \n",
@@ -95,21 +107,25 @@
     "                    start = 'uniform',\n",
     "                    drift = 'normal')\n",
     "\n",
-    "sigma: sets the diffusion rate. Defaults to 1.0.\n",
+    "# sigma: sets the diffusion rate. Defaults to 1.0.\n",
     "\n",
-    "contamination: sets if contamination is included to the model. Defaults to 'none', can also be 'uniform'.\n",
+    "# contamination: sets if contamination is included to the model. Defaults to 'none', can also be 'uniform'.\n",
     "\n",
-    "non_decision: set non-decision time distribution. Defaults to 'normal', can also be 'uniform' or 'none'.\n",
+    "# non_decision: set non-decision time distribution. Defaults to 'normal', can also be 'uniform' or 'none'.\n",
     "\n",
-    "start: set relative start distribution. Defaults to 'uniform', can also be 'normal' or 'none'.\n",
+    "# start: set relative start distribution. Defaults to 'uniform', can also be 'normal' or 'none'.\n",
     "\n",
-    "drift: set drift rate distribution. Defaults to 'normal', can also be 'uniform' or 'none'.\n"
+    "# drift: set drift rate distribution. Defaults to 'normal', can also be 'uniform' or 'none'.\n"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "bc5d433a",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1db8a6f0",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
    "source": [
     "model_leakage = pbp.leakage(sigma = 1.0, \n",
     "                    contamination = 'none', \n",
@@ -117,19 +133,23 @@
     "                            start = 'constant')\n",
     "\n",
     "\n",
-    "sigma: sets the diffusion rate. Defaults to 1.0.\n",
+    "# sigma: sets the diffusion rate. Defaults to 1.0.\n",
     "\n",
-    "contamination: sets if contamination is included to the model. Defaults to 'none', can also be 'uniform'.\n",
+    "# contamination: sets if contamination is included to the model. Defaults to 'none', can also be 'uniform'.\n",
     "\n",
-    "non_decision: set non-decision time distribution. Defaults to 'constant', can also be 'uniform' or 'constant'.\n",
+    "# non_decision: set non-decision time distribution. Defaults to 'constant', can also be 'uniform' or 'constant'.\n",
     "\n",
-    "start: set relative start distribution. Defaults to 'constant', can also be 'uniform' or 'normal'.\n"
+    "# start: set relative start distribution. Defaults to 'constant', can also be 'uniform' or 'normal'.\n"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "f6fbe59f",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98889b8b",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
    "source": [
     "model_moving_thresholds = pbp.moving_thresholds(sigma = 1.0, \n",
     "                                        contamination = 'none', \n",
@@ -137,60 +157,70 @@
     "                                         non_decision = 'constant',\n",
     "                                                start = 'constant')\n",
     "\n",
-    "sigma: sets the diffusion rate. Defaults to 1.0.\n",
+    "# sigma: sets the diffusion rate. Defaults to 1.0.\n",
     "\n",
-    "contamination: sets if contamination is included to the model. Defaults to 'none', can also be 'uniform'.\n",
+    "# contamination: sets if contamination is included to the model. Defaults to 'none', can also be 'uniform'.\n",
     "\n",
-    "thresholds: set threshold type. Defaults to 'weibull', can also be 'linear' or 'exponential'.\n",
+    "# thresholds: set threshold type. Can be 'linear', 'exponential', or 'weibull'.\n",
     "\n",
-    "non_decision: set non-decision time distribution. Defaults to 'constant', can also be 'uniform' or 'constant'.\n",
+    "# non_decision: set non-decision time distribution. Defaults to 'constant', can also be 'uniform' or 'constant'.\n",
     "\n",
-    "start: set relative start distribution. Defaults to 'constant', can also be 'uniform' or 'normal'.\n"
+    "# start: set relative start distribution. Defaults to 'constant', can also be 'uniform' or 'normal'.\n"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "961db17b",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2951f849",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
    "source": [
     "model_UGM = pbp.UGM(sigma = 1.0, \n",
     "            contamination = 'none', \n",
     "             non_decision = 'constant',\n",
     "                    start = 'constant')\n",
     "\n",
-    "sigma: sets the diffusion rate. Defaults to 1.0.\n",
+    "# sigma: sets the diffusion rate. Defaults to 1.0.\n",
     "\n",
-    "contamination: sets if contamination is included to the model. Defaults to 'none', can also be 'uniform'.\n",
+    "# contamination: sets if contamination is included to the model. Defaults to 'none', can also be 'uniform'.\n",
     "\n",
-    "non_decision: set non-decision time distribution. Defaults to 'constant', can also be 'uniform' or 'constant'.\n",
+    "# non_decision: set non-decision time distribution. Defaults to 'constant', can also be 'uniform' or 'constant'.\n",
     "\n",
-    "start: set relative start distribution. Defaults to 'constant', can also be 'uniform' or 'normal'.\n"
+    "# start: set relative start distribution. Defaults to 'constant', can also be 'uniform' or 'normal'.\n"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "08cf2680",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55a3a595",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
    "source": [
     "model_UGM_flip = pbp.UGM_flip(sigma = 1.0, \n",
     "                      contamination = 'none', \n",
     "                       non_decision = 'constant',\n",
     "                              start = 'constant')\n",
     "\n",
-    "sigma: sets the diffusion rate. Defaults to 1.0.\n",
+    "# sigma: sets the diffusion rate. Defaults to 1.0.\n",
     "\n",
-    "contamination: sets if contamination is included to the model. Defaults to 'none', can also be 'uniform'.\n",
+    "# contamination: sets if contamination is included to the model. Defaults to 'none', can also be 'uniform'.\n",
     "\n",
-    "non_decision: set non-decision time distribution. Defaults to 'constant', can also be 'uniform' or 'constant'.\n",
+    "# non_decision: set non-decision time distribution. Defaults to 'constant', can also be 'uniform' or 'constant'.\n",
     "\n",
-    "start: set relative start distribution. Defaults to 'constant', can also be 'uniform' or 'normal'.\n"
+    "# start: set relative start distribution. Defaults to 'constant', can also be 'uniform' or 'normal'.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "f134c51d",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": []
   }
