Update Custom Tutorial 2 - Using your model.ipynb

--- a/tutorials/custom/Custom Tutorial 2 - Using your model.ipynb
+++ b/tutorials/custom/Custom Tutorial 2 - Using your model.ipynb
@@ -36,7 +36,7 @@
    "source": [
     "Next, we need to tell the program where your model is located. To do this, create a string containing the FULL directory name. This will be input into future functions.\n",
     "\n",
-    "For this example, we use the custom model built in Tutorial 1. The files needed for this model are located on the PyBEAM Github in folder CutomTutorial1_model.\n",
+    "For this example, we use the custom model built in Tutorial 1. The files needed for this model are located on the PyBEAM Github in folder ugm_flip.\n",
     "\n",
     "To check that we input the directory correctly, we call the function isdir. If it outputs True, then we know we have specificed a directory on our computer.\n",
     "\n",
