Update Custom Tutorial 2 - Using your model.ipynb

--- a/tutorials/custom/Custom Tutorial 2 - Using your model.ipynb
+++ b/tutorials/custom/Custom Tutorial 2 - Using your model.ipynb
@@ -65,7 +65,7 @@
    ],
    "source": [
     "# the directory containing your model goes here\n",
-    "model_dir = '/Users/matthewmurrow/Documents/phd_research/pybeam/ugm_flip'\n",
+    "model_dir = ''\n",
     "\n",
     "# for windows computer, r before the directory is necessary\n",
     "# model_dir = r''\n",
