--- a/tutorials/custom/Custom Tutorial 1 - Creating a custom model version of the simple DDM.ipynb
+++ b/tutorials/custom/Custom Tutorial 1 - Creating a custom model version of the simple DDM.ipynb
@@ -9,18 +9,17 @@
     "\n",
     "If you have not done so already, install PyBEAM. Go to the PyBEAM github (https://github.com/murrowma/pybeam) for instructions.\n",
     "\n",
-    "Once PyBEAM is installed, we can create our first model. First, download the folder \"custom_model_template.zip\" and unzip it. Then, copy the files to a new directory.\n",
-    "\n",
-    "To do this, create a new folder anywhere on your device and copy the files located in folder \"custom_model_template\" to it. There will be three files you need to copy: \"setup.py\", \"functions.pyx\", and \"model.pyx\". The only file that needs to be modified is \"model.pyx\". DO NOT TOUCH THE OTHER TWO FILES.\n",
+    "Once PyBEAM is installed, we can create our first model. First, download the folder \"custom_model_template.zip\" and unzip it. Then, create a new folder anywhere on your device and copy the files located in folder \"custom_model_template\" to it. There will be three files you need to copy: \"setup.py\", \"functions.pyx\", and \"model.pyx\". The only file that needs to be modified is \"model.pyx\". DO NOT TOUCH THE OTHER TWO FILES.\n",
     "\n",
     "Un-edited, \"model.pyx\" will have the following appearance:\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0a0b1de1",
+   "id": "375698d7",
    "metadata": {},
    "source": [
+    "\n",
     "    \"\"\"\n",
     "    # Import Python packages and C libraries.\n",
     "\n",
@@ -83,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb4884a6",
+   "id": "21582742",
    "metadata": {},
    "source": [
     "The first two lines,\n",
@@ -95,7 +94,7 @@
     "\n",
     "    from libc.math cimport pow, exp, log, sin, cos\n",
     "\n",
-    "imports useful C math functions. The first, pow, is the C verison of raising a number to a power. It's syntax is pow(a, b), which is the python equivalent of a**b. Whenever using exponents, always use pow because it is substantially faster when compiled than the python equivalent.\n",
+    "imports useful C math functions. The first, pow, is the C verison of raising a number to a power. It's syntax is pow(a, b), which is the python equivalent of a**b. Whenever using exponents, always use pow because it is substantially faster when compiled than the Python equivalent.\n",
     "\n",
     "The next several functions (exp, log, sin, and cos) all act the same as their python equivalents. These functions are imported since they are commonly used in models in the literature, but other functions can be included by adding them to this list. For example, if you want a tangent function, you would add tan to the list, giving,\n",
     "\n",
@@ -103,7 +102,7 @@
     "\n",
     "Note that, if functions from other C libraries are desired, additional import lines can be added here.\n",
     "\n",
-    "The second block of code is where your model is defined. First, you must set \"N_phi\" equal to the number of parameters your model contains. If, for example, you were defining the simple DDM with contamination described in Default Tutorial 1, you would input N_phi = 8 here since there were 5 parameters: tnd, w, mu, sigma (the scaling parameter), b, g (contamination strength), gl, and gu (bounds for uniform contamination distribution).\n",
+    "The second block of code is where your model is defined. First, you must set \"N_phi\" equal to the number of parameters your model contains. If, for example, you were defining the simple DDM with contamination described in precoded Tutorial 1a, you would input N_phi = 8 here since there were 8 parameters: tnd, w, mu, sigma (the scaling parameter), b, g (contamination strength), gl, and gu (bounds for uniform contamination distribution).\n",
     "\n",
     "    # total number of input parameters\n",
     "    DEF N_phi = 8\n",
@@ -122,7 +121,7 @@
     "    cdef double non_decision_time(double phi[N_phi]):\n",
     "        return phi[1] # w\n",
     "\n",
-    "The next two functions, drift and diffusion, set the model's drift (v(x,t) in PyBEAM's publication) and diffusion (D(x,t) in PyBEAM's publication) rates (the scaling parameter in this case). They both accept three inputs: phi, x, and t. phi, as before, contains the parameters used by your model. The second, x, is the spatial coordinate and corresponds to the accumulator state. The last, t, is time. Thus, both the drift and diffusion rates can have time and spatial dependecies. Since both are constants, we write the functions returns as the following:\n",
+    "The next two functions, drift and diffusion, set the model's drift (v(x,t) in PyBEAM's publication) and diffusion (D(x,t) in PyBEAM's publication) rates (the scaling parameter in this case). They both accept three inputs: phi, x, and t. phi, as before, contains the parameters used by your model. The second, x, is the spatial coordinate and corresponds to the accumulator state. The last, t, is time. Thus, both the drift and diffusion rates can have time and spatial dependencies. Since both are constants, we write the functions return statemensts as follows:\n",
     "\n",
     "    # function for the drift rate\n",
     "    cdef double drift(double phi[N_phi], double x, double t):\n",
@@ -142,30 +141,40 @@
     "    cdef double lower_decision_threshold(double phi[N_phi], double t):\n",
     "        return -phi[4] # b\n",
     "        \n",
-    "Note here that the upper decision threshold is always positive, while the lower decision threshold is always negative.\n",
+    "Note here that the upper decision threshold must always be positive, while the lower decision threshold must  always be negative.\n",
     "\n",
-    "The last two model functions are for adding a contamination model. The first of these, contamination_strength, sets the amount of contamination. If it returns 0, your model has no contamination; if it returns 1, your model is only contamination. This functions only accepts inputs of phi, meaning it can only output a constant value. In our case, we the following:\n",
+    "The last two model functions are for adding a contamination model. The first of these, contamination_strength, sets the amount of contamination. If it returns 0, your model has no contamination; if it returns 1, your model is only contamination. This function only accepts inputs of phi, meaning it can only output a constant value. In our case, we do the following:\n",
     "\n",
     "    # function for the contamination strength\n",
     "    cdef double contamination_strength(double phi[N_phi]):\n",
-    "        return phi[5]\n",
+    "        return phi[5] # g\n",
     "\n",
-    "The second contamination function is contamination_probability. This functions returns the probability of a contamination event occurring at time t., a uniform contamination was added to the model. So, a uniform distribution is required for this function. It accepts inputs of phi and t. This gives us the following:\n",
+    "The second contamination function is contamination_probability. This function returns the probability of a contamination event occurring at time t. It accepts inputs of phi and t. In this case, a uniform contamination is added to the model, so a uniform distribution is required for this function. This gives us the following:\n",
     "\n",
     "    # function for the contamination probability\n",
     "    cdef double contamination_probability(double phi[N_phi], double t):\n",
-    "        cdef double gl = phi[6]\n",
-    "        cdef double gu = phi[7]\n",
-    "        cdef double pg = 0.0\n",
+    "        cdef double gl = phi[6] # lower bound of uniform distribution\n",
+    "        cdef double gu = phi[7] # upper bound of uniform distribution\n",
+    "        cdef double pg = 0.0    # contamination probability\n",
     "        \n",
     "        if (t >= gl) and (t <= gu):\n",
     "            pg = 1.0/(gu - gl)\n",
     "            \n",
     "        return pg\n",
+    "        \n",
+    "Note that we output the entire uniform distribution here. PyBEAM scales it in the background by the contamination strength and splits it between the upper and lower threshold likelihood functions automatically.\n",
     "\n",
     "The last block of code provides a function for modifying the time step. In general this should not be touched, but it allows for your time step to be made altered in regions where it's hard to accurately obtain the likelihood function. For example, if your drift/threshold functions have discontinuities in them, it can sometimes be helpful to add a time step modification locally around it.  If it outputs 1, the time step is not modified; if it recieves a value of less than 1, the time step will get smaller; if it outputs a value more than 1; the time step will grow. For example, if it returns 0.5, the time step will be one-half of its normal value.\n",
     "\n",
-    "This gives us the following model.pyx function for the simple DDM.\n",
+    "This gives us the following model.pyx function for the simple DDM:\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ff45137",
+   "metadata": {},
+   "source": [
     "\n",
     "    \"\"\"\n",
     "    # Import Python packages and C libraries.\n",
@@ -233,20 +242,27 @@
     "    # function to modify the time step\n",
     "    cdef double modify_dt(double phi[N_phi], double t):\n",
     "        return 1.0\n",
-    "        \n",
-    "        \n",
-    "Once you have finished the model.pyx file, you now need to compile the function. To do so, open terminal/anaconda prompt/command prompt (depending on OS), and navigate to the folder containing your model files. Then, run the following line of code:\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b00165d4",
+   "metadata": {},
+   "source": [
+    "Once you have finished the model.pyx file, you now need to compile the function. To do so, open terminal, anaconda prompt, or command prompt (depending on OS), and navigate to the folder containing your model files. Then, run the following line of code:\n",
     "    \n",
     "    python setup.py build_ext --inplace\n",
     "    \n",
-    "And with that, your model is ready to be used with PyBEAM!\n",
-    "    "
+    "Note that the program you have compiled is unique to that particular version of Python. For example, if you compile it with Python 3.9, you will need to re-compile it if you upgrade to Python 3.11.\n",
+    "    \n",
+    "And with that, your model is ready to be used with PyBEAM!\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2eb803f6",
+   "id": "1fa4a46e",
    "metadata": {},
    "outputs": [],
    "source": []
