--- a/tutorials/custom/Custom Tutorial 1a - Creating a custom model version of the UGM_flip.ipynb
+++ b/tutorials/custom/Custom Tutorial 1a - Creating a custom model version of the UGM_flip.ipynb
@@ -2,16 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "620931d1",
+   "id": "7c450069",
    "metadata": {},
    "source": [
     "# Custom Tutorial 1a: Creating a custom model version of the UGM_flip model\n",
     "\n",
     "If you have not done so already, install PyBEAM. Go to the PyBEAM github (https://github.com/murrowma/pybeam) for instructions. Then, go through Custom Tutorial 1 to learn how to build the simple DDM.\n",
     "\n",
-    "Once PyBEAM is installed, we can create our first model. First, download the folder \"custom_model_template.zip\" and unzip it. Then, copy the files to a new directory.\n",
-    "\n",
-    "To do this, create a new folder anywhere on your device and copy the files located in folder \"custom_model_template\" to it. There will be three files you need to copy: \"setup.py\", \"functions.pyx\", and \"model.pyx\". The only file that needs to be modified is \"model.pyx\". DO NOT TOUCH THE OTHER TWO FILES.\n",
+    "Once PyBEAM is installed, we can create our model. First, download the folder \"custom_model_template.zip\" and unzip it. Then, create a new folder anywhere on your device and copy the files located in folder \"custom_model_template\" to it. There will be three files you need to copy: \"setup.py\", \"functions.pyx\", and \"model.pyx\". The only file that needs to be modified is \"model.pyx\". DO NOT TOUCH THE OTHER TWO FILES.\n",
     "\n",
     "In this file, we create the UGM_flip model contained in the PyBEAM publication and PyBEAM's precoded model set. It has the following 8 parameters:\n",
     "\n",
@@ -30,10 +28,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83851811",
+   "id": "330f4607",
    "metadata": {},
    "source": [
-    "As an example, lets recreate another model we have already seem from earlier PyBEAM tutorials: UGM_flip. Doing so produces the following model.pyx file:\n",
     "\n",
     "    \"\"\"\n",
     "    # Import Python packages and C libraries.\n",
@@ -55,19 +52,21 @@
     "\n",
     "    # function for the non-decision time\n",
     "    cdef double non_decision_time(double phi[N_phi]):\n",
-    "        return phi[0]\n",
+    "        return phi[0] # non-decision time, tnd\n",
     "\n",
     "    # function for the relative start point\n",
     "    cdef double relative_start(double phi[N_phi]):\n",
-    "        return phi[1]\n",
+    "        return phi[1] # relative start point, w\n",
     "\n",
     "    # function for the drift rate\n",
     "    cdef double drift(double phi[N_phi], double x, double t):\n",
-    "        cdef double mu = phi[2]\n",
-    "        cdef double l = phi[3]\n",
-    "        cdef double k = phi[4]\n",
-    "        cdef double t_flip = phi[5]\n",
+    "        cdef double mu = phi[2]     # drift rate, mu\n",
+    "        cdef double l = phi[3]      # leakage rate, l\n",
+    "        cdef double k = phi[4]      # urgency, k\n",
+    "        cdef double t_flip = phi[5] # time at which drift rate flips, t_flip\n",
     "\n",
+    "        # if time is less than t_flip, return drift rate with postive mu\n",
+    "        # otherwise, return drift rate with negative mu\n",
     "        if (t < t_flip):\n",
     "            return mu*(1.0 + k*t) + ( k/(1.0 + k*t) - l )*x\n",
     "        else:\n",
@@ -75,18 +74,18 @@
     "\n",
     "    # function for the diffusion rate\n",
     "    cdef double diffusion(double phi[N_phi], double x, double t):\n",
-    "        cdef double sigma = phi[6]\n",
-    "        cdef double k = phi[4]\n",
+    "        cdef double sigma = phi[6] # scaling parameter, sigma\n",
+    "        cdef double k = phi[4]     # urgency, k\n",
     "\n",
     "        return sigma*(1.0 + k*t)\n",
     "\n",
     "    # function for the upper decision threshold\n",
     "    cdef double upper_decision_threshold(double phi[N_phi], double t):\n",
-    "        return phi[7]\n",
+    "        return phi[7] # upper decision threshold, b\n",
     "\n",
     "    # function for the lower decision threshold\n",
     "    cdef double lower_decision_threshold(double phi[N_phi], double t):\n",
-    "        return -upper_decision_threshold(phi, t)\n",
+    "        return -upper_decision_threshold(phi, t) # lower decision threshold, -b\n",
     "\n",
     "    # function for the contamination strength\n",
     "    cdef double contamination_strength(double phi[N_phi]):\n",
@@ -108,12 +107,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff7f4397",
+   "id": "02d8f606",
    "metadata": {},
    "source": [
     "Once you have finished the model.pyx file, you now need to compile the function. To do so, open terminal/anaconda prompt/command prompt (depending on OS), and navigate to the folder containing your model files. Then, run the following line of code:\n",
     "    \n",
     "    python setup.py build_ext --inplace\n",
+    "    \n",
+    "Note that the program you have compiled is unique to that particular version of Python. For example, if you compile it with Python 3.9, you will need to re-compile it if you upgrade to Python 3.11.\n",
     "    \n",
     "And with that, your model is ready to be used with PyBEAM!\n"
    ]
@@ -121,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6224e495",
+   "id": "974219c0",
    "metadata": {},
    "outputs": [],
    "source": []
