--- a/tutorials/custom/Custom Tutorial 3 - Parameter inference.ipynb
+++ b/tutorials/custom/Custom Tutorial 3 - Parameter inference.ipynb
@@ -47,7 +47,7 @@
    "outputs": [],
    "source": [
     "# the directory containing your model goes here\n",
-    "model_dir = '/Users/matthewmurrow/Documents/phd_research/pybeam/ugm_flip'\n",
+    "model_dir = ''\n",
     "\n",
     "# for windows computers, r before the directory is necessary\n",
     "# model_dir = r''\n",
